[package]
name = "romeo"
version = "0.0.3" # don't forget to update html root_url
authors = ["John Murray <me@johnmurray.io>"]
description = "An experimental actor framework for plug-able behaviors"
repository = "https://github.com/johnmurray/romeo"
documentation = "https://docs.rs/romeo"
keywords = ["actor", "distributed", "actix"]
categories = ["asynchronous", "concurrency"]
license = "Apache-2.0"
readme = "readme.md"

[dependencies]
log = "0.4"
num_cpus = "1.8.0"
